# some-smart-contract-stuff

./: .gitignore  Cargo.toml  build-all.sh  lib.rs
ticket/: Cargo.toml  lib.rs
