[package]
name = "first"
version = "0.1.0"
authors = ["Morten Bergseng"]
edition = "2021"

[dependencies]

ticket = { version = "*", path = "./ticket", default-features = false, features = [
"ink-as-dependency",
] }
ink_primitives = { version = "3.3", default-features = false }
ink_metadata = { version = "3.3", default-features = false, features = [
"derive",
], optional = true }
ink_env = { version = "3.3", default-features = false }
ink_storage = { version = "3.3", default-features = false }
ink_lang = { version = "3.3", default-features = false }
ink_prelude = { version = "3.4", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
"derive",
] }
scale-info = { version = "2", default-features = false, features = [
"derive",
], optional = true }

[lib]
name = "first"
path = "lib.rs"
crate-type = [
# Used for normal contract Wasm blobs.
"cdylib",
"rlib",
]

[features]
default = ["std"]
std = [
"ink_metadata/std",
"ink_env/std",
"ink_storage/std",
"ink_primitives/std",
"scale/std",
"scale-info/std",
"ticket/std",
]
ink-as-dependency = []

[workspace]
members = ["ticket"]
